@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 03Dec2014 Adding list-functions DynInst based tool (not installed)
  + 19Nov2014 Recorded events for bytes sent/received via SHMEM calls
              Added new states for SHMEM operations
 	     Now emmitting callers at the entry of SHMEM calls
